test/corpus/cmp.txt
==================
cmp
==================

fun i32 @char_greater_than (i8, u8) {
init:
  bid: b0
  allocations: 


block b0:
  %b0:p0:i8:i
  %b0:p1:u8:j
  %b0:i0:i32 = typecast %b0:p0:i8 to i32
  %b0:i1:i32 = typecast %b0:p1:u8 to i32
  %b0:i2:u1 = cmp gt %b0:i0:i32 %b0:i1:i32
  br %b0:i2:u1, b1(), b2()

block b1:
  ret 1:i32

block b2:
  ret 0:i32
}

fun i32 @int_greater_than (i32, u32) {
init:
  bid: b0
  allocations: 


block b0:
  %b0:p0:i32:i
  %b0:p1:u32:j
  %b0:i0:u32 = typecast %b0:p0:i32 to u32
  %b0:i1:u1 = cmp gt %b0:i0:u32 %b0:p1:u32
  br %b0:i1:u1, b1(), b2()

block b1:
  ret 1:i32

block b2:
  ret 0:i32
}

fun i32 @main () {
init:
  bid: b0
  allocations: 


block b0:
  %b0:i0:i32 = minus 1:i32
  %b0:i1:u32 = typecast 1:i32 to u32
  %b0:i2:i32 = call @int_greater_than:[ret:i32 params:(i32, u32)]*(%b0:i0:i32, %b0:i1:u32)
  %b0:i3:i32 = minus 1:i32
  %b0:i4:i8 = typecast %b0:i0:i32 to i8
  %b0:i5:u8 = typecast 1:i32 to u8
  %b0:i6:i32 = call @char_greater_than:[ret:i32 params:(i8, u8)]*(%b0:i4:i8, %b0:i5:u8)
  %b0:i7:u1 = cmp eq %b0:i2:i32 1:i32
  br %b0:i7:u1, b1(), b2()

block b1:
  %b1:i0:u1 = cmp eq %b0:i6:i32 0:i32
  j b3(%b1:i0:u1)

block b2:
  j b3(0:u1)

block b3:
  %b3:p0:u1:t0
  %b3:i0:i32 = typecast %b3:p0:u1 to i32
  ret %b3:i0:i32
}

---

(source_file
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier)
      (function_param_types
        (type
          (sigined_integer_type))
        (type
          (unsigned_integer_type))))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (phi_node
          (phi_id)
          (type
            (unsigned_integer_type))
          (identifier))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (type
              (sigined_integer_type))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (phi_id)
                (type
                  (unsigned_integer_type))))
            (type
              (sigined_integer_type))))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (exit
          (conditional_branch
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier)
      (function_param_types
        (type
          (sigined_integer_type))
        (type
          (unsigned_integer_type))))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (phi_node
          (phi_id)
          (type
            (unsigned_integer_type))
          (identifier))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (typecast
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (type
              (unsigned_integer_type))))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (operand
              (register_operand
                (phi_id)
                (type
                  (unsigned_integer_type))))))
        (exit
          (conditional_branch
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (unary_op
            (unary_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (typecast
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (type
              (unsigned_integer_type))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (call
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (function_type
                        (type
                          (sigined_integer_type))
                        (function_param_types
                          (type
                            (sigined_integer_type))
                          (type
                            (unsigned_integer_type)))))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (unary_op
            (unary_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (type
              (sigined_integer_type))))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (typecast
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (type
              (unsigned_integer_type))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (call
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (function_type
                        (type
                          (sigined_integer_type))
                        (function_param_types
                          (type
                            (sigined_integer_type))
                          (type
                            (unsigned_integer_type)))))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (conditional_branch
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (jump
            (block_id)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type)))))))
      (block
        (block_id)
        (exit
          (jump
            (block_id)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (unsigned_integer_type)))))))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (unsigned_integer_type))
          (identifier))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (phi_id)
                (type
                  (unsigned_integer_type))))
            (type
              (sigined_integer_type))))
        (exit
          (return
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))))))
